# cp-transpiler

./: .gitignore  CMakeLists.txt  README.md  language-definition.md  language-syntax.md  next-step-plan.md  transpiler-architecture.md  transpiler-implementation-plan.md  transpiler-implementation-spec.md
example/: CMakeLists.txt  README.md
example/cplus/: demo.hp
example/src/: cplus_types.h  demo.cp  demo.hp  main.c
example/src/app/: main.cp  main.hp
example/src/drivers/hello-sayer/: hello-sayer.cp  hello-sayer.hp
nvim/: README.md
tests/: CMakeLists.txt  README.md  ctest_fixture.sh  run_board_serial_example.sh  run_body_parsing.sh  run_body_parsing_paired.sh  run_example_transpile.sh  run_field_access_rewriting_gap.sh  run_forbidden_constructs.sh  run_gap_tests.sh  run_inject_bind.sh  run_member_initializer_overloads.sh  run_member_initializers.sh  run_member_initializers_gap.sh  run_member_initializers_invalid_gap.sh  run_member_subobjects.sh  run_out_of_class_method_calls_gap.sh  run_out_of_class_methods.sh  run_out_of_class_object_method_calls_gap.sh  run_private_methods.sh  run_qualified_local_object_gap.sh  run_raii_fallthrough.sh  run_raii_nested_return.sh  run_raii_nested_return_value.sh  run_raii_return.sh  run_raii_return_value.sh  run_tests.sh
tests/.tmp/: cplus_board_serial  cplus_body_pair_tests  cplus_body_tests  cplus_example  cplus_forbidden_tests  cplus_gap_tests  cplus_out_of_class_method_calls  cplus_out_of_class_methods  cplus_out_of_class_object_method_calls  cplus_private_methods  cplus_raii_fallthrough  cplus_raii_nested_return  cplus_raii_nested_return_value  cplus_raii_return  cplus_raii_return_value  cplus_smoke  cplus_tests  out_of_class_methods.expected
tests/.tmp/out_bad_maybe/: bad_maybe.c  bad_maybe.h
tests/.tmp/out_board_serial/: board_serial.c  board_serial.h
tests/.tmp/out_body/: body.h
tests/.tmp/out_body_dbg/: body.c
tests/.tmp/out_body_paired/: body.c
tests/.tmp/out_example/: example.c  example.h
tests/.tmp/out_example_verbose/: example.h
tests/.tmp/out_interface/: interface.h
tests/.tmp/out_maybe/: maybe.c  maybe.h
tests/.tmp/out_method_calls/: thermo.c
tests/.tmp/out_object_calls/: thermo.c  thermo.h
tests/.tmp/out_out_of_class_method_calls/: thermo.c  thermo.h
tests/.tmp/out_out_of_class_methods/: thermo.c
tests/.tmp/out_out_of_class_methods2/: thermo.h
tests/.tmp/out_out_of_class_object_method_calls/: thermo.c
tests/.tmp/out_raii/: raii.c
tests/.tmp/out_raii2/: raii.c  raii.h
tests/.tmp/out_raii_nested_return/: raii.c
tests/.tmp/out_raii_return_value/: raii.h
tests/.tmp/out_thermo/: thermo.c
tests/.tmp/out_thermo3/: thermo.c
tests/.tmp/out_thermo4/: thermo.c
tests/.tmp/private_methods_out/: private_demo.c  private_demo.h
tests/body-parsing/basic/input/: body.cp  body.hp
tests/body-parsing/invalid/expected/: diagnostics.txt
tests/body-parsing/invalid/input/: body_bad.cp  body_bad.hp
tests/enum-scope/basic/expected/: enum_scope.c  enum_scope.h
tests/enum-scope/basic/input/: enum_scope.cp  enum_scope.hp
tests/example-transpile/basic/expected/: example.c  example.h
tests/example-transpile/basic/input/: example.cp  example.hp
tests/examples/: README.md
tests/examples/board-serial/basic/: README.md
tests/export-c/basic/expected/: export_c.c  export_c.h
tests/export-c/basic/input/: export_c.cp  export_c.hp
tests/export-c/invalid/expected/: diagnostics.txt
tests/export-c/invalid/input/: export_c.cp  export_c.hp
tests/forbidden-constructs/invalid/expected/: diagnostics.txt
tests/forbidden-constructs/invalid/input/: forbidden.cp  forbidden.hp
tests/import/basic/expected/: helper.c  helper.h  main.c  main.h
tests/import/basic/input/: helper.cp  helper.hp  main.cp  main.hp
tests/inject-bind/basic/expected/: inject.c  inject.h
tests/inject-bind/basic/input/: inject.cp  inject.hp
tests/inject-bind/invalid/expected/: diagnostics.txt
tests/inject-bind/invalid/input/: inject.cp  inject.hp
tests/interface-fulfillment/basic/expected/: interface.c  interface.h
tests/interface-fulfillment/basic/input/: interface.hp
tests/local-object-raii/basic/expected/: local_object.c  local_object.h
tests/local-object-raii/basic/input/: local_object.cp  local_object.hp
tests/maybe-safety/basic/expected/: maybe.c  maybe.h
tests/maybe-safety/basic/input/: maybe.hp
tests/maybe-safety/invalid/expected/: diagnostics.txt
tests/maybe-safety/invalid/input/: bad_maybe.cp  bad_maybe.hp
tests/member-initializer-overloads/basic/expected/: overload.c  overload.h
tests/member-initializer-overloads/basic/input/: overload.cp  overload.hp
tests/member-initializer-overloads/invalid/expected/: diagnostics.txt
tests/member-initializer-overloads/invalid/input/: overload.cp  overload.hp
tests/member-initializers/basic/expected/: member_init.c  member_init.h
tests/member-initializers/basic/input/: member_init.cp  member_init.hp
tests/member-initializers/invalid/expected/: diagnostics.txt
tests/member-initializers/invalid/input/: member_init.cp  member_init.hp
tests/member-subobjects/basic/expected/: member.c  member.h
tests/member-subobjects/basic/input/: member.cp  member.hp
tests/member-subobjects/invalid/expected/: diagnostics.txt
tests/member-subobjects/invalid/input/: member.cp  member.hp
tests/missing-definitions/invalid/expected/: diagnostics.txt
tests/missing-definitions/invalid/input/: missing.cp  missing.hp
tests/namespace-top-level/invalid/expected/: diagnostics.txt
tests/namespace-top-level/invalid/input/: multiple.hp
tests/out-of-class-field-access/basic/expected/: thermo.h
tests/out-of-class-field-access/basic/input/: thermo.cp  thermo.hp
tests/out-of-class-method-calls/basic/expected/: thermo.c  thermo.h
tests/out-of-class-method-calls/basic/input/: thermo.cp  thermo.hp
tests/out-of-class-methods/basic/input/: thermo.hp
tests/out-of-class-object-method-calls/basic/expected/: thermo.c  thermo.h
tests/out-of-class-object-method-calls/basic/input/: thermo.cp  thermo.hp
tests/smoke/: run_smoke.sh
tests/unit/: strings_test.cpp
(+83 files in other folders)
